# chat-san

./: .gitignore  Makefile  package-lock.json  pyproject.toml  serverless.yml
api/: auth.py  config.py  main.py  util.py
misc/: jwks.json
misc/terraform/: main.tf  s3.tf
models/: __init__.py  crud.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  Session.jsx  main.jsx
ui/src/components/: Body.jsx
